# capitalview-api

./: .dockerignore  .env.enc  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  _test_binance_parser.py  config.py  database.py  main.py  patch_history.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 16f1698c735e_add_ai_api_keys_to_user_settings.py  1c8cf8cb8eeb_add_cards_table_and_settings.py  24e4c1c2a2f1_initial_migration.py  2f624844c4f5_rename_assets_columns_to_asset_key.py  792d6ae341f8_add_username_and_email_change_track.py  7c9db47683df_add_ai_integration_and_cards.py  97ba0aa60f3e_add_crypto_show_negative_positions.py  a1b2c3d4e5f6_add_account_security.py  a1b2c3d4e5f6_add_position_to_notes.py  a2088aa4e15f_add_gross_deposits_and_withdrawals_to_.py  a37063c201a5_initial_migration.py  aa1b2c3d4e5f_add_account_security.py  acbbf762e7ac_rename_community_pick_symbol_to_asset_.py  b2c3d4e5f6a7_add_assets_tables.py  b38e3b3aff98_add_market_assets_asset_type_column.py  bb2c3d4e5f6a_add_display_timezone_to_user_settings.py  c2ce2fa2ceb5_add_table_refreshtoken.py  c3c8860cb414_hash_refresh_tokens.py  c3d4e5f6a7b8_add_sold_fields_to_assets.py  c669d294e844_initial_migration.py  cc3d4e5f6a7b_add_display_locale_to_user_settings.py  d5e6f7a8b9c0_add_group_uuid_drop_fees_enc_from_crypto_transactions.py  d8e7d6f9cfec_initial_tables.py  dd4e5f6a7b8c_add_calc_version_to_account_history.py  e6f7a8b9c0d1_add_crypto_module_settings.py  f7a8b9c0d1e2_add_usd_eur_rate_to_settings.py  g8h9i0j1k2l3_add_bank_cashflow_module_settings.py  i0j1k2l3m4n5_refactor_community_tables.py  j1k2l3m4n5o6_add_follows_and_privacy.py  k2l3m4n5o6p7_add_community_picks.py  l3m4n5o6p7q8_split_market_price_history.py  m4n5o6p7q8r9_add_account_history_table.py  n5o6p7q8r9s0_refactor_market_assets_provider.py  o6p7q8r9s0t1_add_cashflow_bank_link.py  p7q8r9s0t1u2_add_opened_at_to_accounts.py  q8r9s0t1u2v3_refactor_assets_single_source_valuation.py  r9s0t1u2v3w4_add_account_history_cumulative_fees_dividends.py  r9s0t1u2v3w4_rename_community_pick_symbol_to_asset_key.py
docs/superpowers/plans/: 2026-07-24-crypto-stock-realized-pnl.md
docs/superpowers/specs/: 2026-07-23-account-fiat-crypto-scope-consistency-design.md  2026-07-23-crypto-realized-pnl-design.md
dtos/: __init__.py  _dates.py  asset.py  auth.py  bank.py  cashflow.py  community.py  crypto.py  dashboard.py  imports.py  note.py  projection.py  settings.py  stock.py  transaction.py
models/: __init__.py  account_history.py  asset.py  bank.py  card.py  cashflow.py  community.py  crypto.py  enums.py  market.py  note.py  stock.py  user.py
routes/: __init__.py  asset.py  auth.py  bank.py  cashflow.py  community.py  crypto.py  dashboard.py  imports.py  market.py  notes.py  portfolio.py  projection.py  settings.py  stocks.py  users.py
schemas/: __init__.py  auth.py  bank.py  cashflow.py  crypto.py  note.py  stock.py  transaction.py
services/: __init__.py  account_history.py  asset.py  auth.py  bank.py  cashflow.py  community.py  community_encryption.py  crypto.py  crypto_account.py  crypto_transaction.py  encryption.py  exchange_rate.py  follow.py  market.py  note.py  pick.py  portfolio.py  projection.py  settings.py  stock_account.py  stock_transaction.py  stocks.py  totp.py
services/ai/: manager.py  registry.py  tools.py
services/ai/agents/: agent.py  card_agent.py  extract_tx_agent.py
services/ai/providers/: __init__.py  anthropic.py  base.py  deepseek.py  (+1 more)
services/imports/: __init__.py  _crypto_common.py  bank_csv.py  base.py  binance.py  coinbase.py  dedup.py  degiro.py  generic_csv.py  kraken.py  registry.py  trade_republic.py
services/market_data/: __init__.py  manager.py
tests/: conftest.py
tests/routes/: test_asset_routes.py  test_auth_routes.py  test_bank_routes.py  test_cashflow_routes.py  test_community_routes.py  test_crypto_routes.py  test_dashboard_routes.py  test_date_handling.py  test_imports_routes.py  test_market_routes.py  test_notes_routes.py  test_settings.py  test_stocks_routes.py
tests/services/: test_account_history.py  test_asset.py  test_auth.py  test_bank.py  test_bank_auto_sync.py  test_bank_import.py  test_binance_import.py  test_broker_imports.py  test_cashflow.py  test_cashflow_occurrences.py  test_coinbase_import.py  test_crypto_account.py  test_crypto_transaction.py  test_encryption.py  test_exchange_rate.py  test_generic_import.py  test_history_services.py  test_kraken_import.py  test_market.py  test_market_calendar_cache.py  test_market_manager.py  test_market_search_manual.py  test_market_yahoo.py  test_note.py  test_projection.py  test_stock_account.py  test_stock_transaction.py  test_totp.py
(+4 files in other folders)
