[project]
name = "capitalview-backend"
version = "1.0.0"
description = "Personal wealth management and investment tracking application - Backend API"
authors = [
    {name = "Emilien", email = "user@example.com"}
]
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.128.7",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.32",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.4",
    "pyjwt[crypto]>=2.11.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.5",
    "slowapi>=0.1.9",
    "PyNaCl>=1.6.2",
    "email-validator>=2.3.0",
    "python-dotenv>=1.2.1",
    "pydantic-settings>=2.12.0",
    "yfinance>=1.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "routes", "schemas", "services"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "black>=26.1.0",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "sqlmodel",
    "alembic",
    "slowapi",
    "nacl.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
